# polyglot-devenv

./: .gitignore  .mcp.json  BATTLE_TEST_REPORT.md  CLAUDE.local.md  CLAUDE.local.md.template  CLAUDE.md  Makefile  README.md  REFACTORING_PLAN.md  SWARM_FLOW_IMPLEMENTATION_SUMMARY.md  SWARM_QUICKSTART_GUIDE.md  SWARM_WASM_IMPLEMENTATION_PLAN.md  WASM_IMPLEMENTATION.md  common.json  devpod.md  enhanced-mcp-test-report.md  git-workflow.md  nushell.md  pnpm-workspace.yaml  rule2hook.md  test-devbox-start.md  test-dynamic-features.js
.claude/: ENHANCED_HOOKS_SUMMARY.md  polyglot-hooks-config.json  settings.json
.claude/commands/: devpod-go.md  devpod-python.md  devpod-rust.md  devpod-typescript.md  generate-prp-enhanced.md  generate-prp-v2.py  generate-prp.md
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.serena/: project.yml
context-engineering/: CLAUDE.md  ENHANCED-SYSTEM-SUMMARY.md  test-enhanced-system.nu  test-simple.nu  test_composite_template.py  test_environment_adapter.py  test_integrated_system.py  test_prp_builder.py  test_secure_command_system.py
context-engineering/docs/: integration-guide.md
dev-env/go/: devbox.json
dev-env/nushell/: devbox.json
dev-env/python/: devbox.json
dev-env/rust/: Cargo.toml  README.md  build-wasm.sh  devbox.json
dev-env/rust/examples/: nodejs-example.js  package-lock.json  package.json  web-example.html
dev-env/rust/pkg/: wasm-swarm-coordinator.d.ts
dev-env/rust/src/: agent.rs  coordinator.rs  lib.rs  memory_store.rs  message_bus.rs  task_queue.rs
dev-env/typescript/: devbox.json
devpod-automation/scripts/: devpod-generate.nu  provision-all.sh  provision-go.sh  provision-nushell.sh  provision-python.sh  provision-rust.sh  provision-typescript.sh
go-env/: devbox.json  test_format.go
go-env/cmd/: main.go  main_test.go
host-tooling/devpod-management/: manage-devpod.nu
mcp/: CLAUDE.md  README.md  package-lock.json  package.json  polyglot-server.ts  polyglot-types.ts  polyglot-utils.ts
mcp-ref/: README-TypeScript.md  common.nu  polyglot-instructions.md  server.nu  simple-server.nu  simple-stdio.nu  test-mcp.nu  test-report.nu  test-single.nu  test-tools.nu  working-server.nu
mcp-ref/prompts/: handler.nu  registry.nu
mcp-ref/protocol/: capabilities.nu  stdio-fixed.nu  (+1 more)
nushell-env/: common.nu  devbox.json
python-env/: devbox.json  pyproject.toml  test_example.py  test_format.py  test_hooks.py
python-env/src/: __init__.py  calculator.py  main.py  test_calculator.py
rust-env/: devbox.json
scripts/: validate-all.nu
typescript-env/: devbox.json  package.json
(+31 files in other folders)
