[project]
name = "polyglot-python"
version = "0.1.0"
description = "Python component of polyglot development environment"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7.0", 
    "pytest>=7.4.0",
    "pytest-cov"
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
